[gd_scene load_steps=14 format=2]

[ext_resource path="res://GUI/BlackBackground.png" type="Texture" id=1]
[ext_resource path="res://GUI/LightGrayBackground.png" type="Texture" id=2]
[ext_resource path="res://GUI/GrayBackground.png" type="Texture" id=3]
[ext_resource path="res://Halloween9.tres" type="DynamicFont" id=4]
[ext_resource path="res://Textures/Fiery.jpg" type="Texture" id=5]
[ext_resource path="res://Textures/DirtyPaperTexture.jpg" type="Texture" id=6]
[ext_resource path="res://Halloween Nightmare Demo (daFONT).ttf" type="DynamicFontData" id=7]
[ext_resource path="res://GUI/SkeletonIcon.png" type="Texture" id=8]
[ext_resource path="res://Spell Book.gd" type="Script" id=9]
[ext_resource path="res://SpellSlot.gd" type="Script" id=10]
[ext_resource path="res://Spell.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 6
font_data = ExtResource( 7 )

[node name="SpellBook" type="Control"]
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellBookMenu" type="Control" parent="."]
margin_left = 186.235
margin_top = 72.2166
margin_right = 226.235
margin_bottom = 112.217
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBorder" type="NinePatchRect" parent="SpellBookMenu"]
margin_left = 202.021
margin_top = 5.35355
margin_right = 312.021
margin_bottom = 145.354
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="SpellBookMenu/BackgroundBorder"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookPage" type="VBoxContainer" parent="SpellBookMenu"]
margin_left = 205.021
margin_top = 8.35355
margin_right = 325.021
margin_bottom = 146.354
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SpellBookMenu/BookPage"]
margin_right = 120.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )

[node name="Label" type="Label" parent="SpellBookMenu/BookPage"]
margin_top = 2.0
margin_right = 120.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 5 )
custom_fonts/font = ExtResource( 4 )
text = "SpellBook"
align = 1
valign = 2

[node name="Page" type="HBoxContainer" parent="SpellBookMenu/BookPage"]
margin_top = 13.0
margin_right = 120.0
margin_bottom = 23.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SpellBookMenu/BookPage/Page"]
margin_right = 3.0
margin_bottom = 10.0
rect_min_size = Vector2( 3, 10 )
size_flags_vertical = 0

[node name="SkeletonTab" type="Control" parent="SpellBookMenu/BookPage/Page"]
margin_left = 5.0
margin_right = 35.0
margin_bottom = 10.0
rect_min_size = Vector2( 30, 10 )
size_flags_vertical = 0
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/Page/SkeletonTab"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.0
margin_right = 30.0
margin_bottom = 5.0
rect_min_size = Vector2( 30, 10 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkeletonButton" type="TextureButton" parent="SpellBookMenu/BookPage/Page/SkeletonTab/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpellBookMenu/BookPage/Page/SkeletonTab/TextureRect/SkeletonButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -4.5
margin_right = 17.5
margin_bottom = 4.5
custom_fonts/font = SubResource( 1 )
text = "Skeletons"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CadaverTab" type="Control" parent="SpellBookMenu/BookPage/Page"]
margin_left = 37.0
margin_right = 67.0
margin_bottom = 10.0
rect_min_size = Vector2( 30, 10 )
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/Page/CadaverTab"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 30, 10 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CadaverButton" type="TextureButton" parent="SpellBookMenu/BookPage/Page/CadaverTab/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpellBookMenu/BookPage/Page/CadaverTab/TextureRect/CadaverButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -4.5
margin_right = 17.5
margin_bottom = 4.5
custom_fonts/font = SubResource( 1 )
text = "Cadavers"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpectreTab" type="Control" parent="SpellBookMenu/BookPage/Page"]
margin_left = 69.0
margin_right = 99.0
margin_bottom = 10.0
rect_min_size = Vector2( 30, 10 )
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/Page/SpectreTab"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 30, 10 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="SpellBookMenu/BookPage/Page/SpectreTab/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpellBookMenu/BookPage/Page/SpectreTab/TextureRect/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -4.5
margin_right = 17.5
margin_bottom = 4.5
custom_fonts/font = SubResource( 1 )
text = "Spectres"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SpellBookMenu/BookPage"]
margin_top = 23.0
margin_right = 120.0
margin_bottom = 138.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer"]
margin_right = 120.0
margin_bottom = 7.0
rect_min_size = Vector2( 0, 7 )

[node name="SkeletonTab" type="Control" parent="SpellBookMenu/BookPage/VBoxContainer"]
margin_top = 7.0
margin_right = 120.0
margin_bottom = 7.0

[node name="VBoxContainer" type="VBoxContainer" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab"]
margin_right = 111.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row1" type="HBoxContainer" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer"]
margin_right = 111.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1"]
margin_right = 7.0
margin_bottom = 25.0
rect_min_size = Vector2( 7, 0 )

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1"]
margin_left = 7.0
margin_right = 32.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 2 )
expand = true

[node name="Skeleton" type="TextureButton" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1/TextureRect/Skeleton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1"]
margin_left = 32.0
margin_right = 39.0
margin_bottom = 25.0
rect_min_size = Vector2( 7, 0 )

[node name="NinePatchRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1"]
margin_left = 39.0
margin_right = 64.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1"]
margin_left = 64.0
margin_right = 71.0
margin_bottom = 25.0
rect_min_size = Vector2( 7, 0 )

[node name="NinePatchRect2" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1"]
margin_left = 71.0
margin_right = 96.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="Row1Info" type="HBoxContainer" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer"]
margin_top = 29.0
margin_right = 111.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 7 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1Info"]
margin_right = 7.0
margin_bottom = 10.0
rect_min_size = Vector2( 7, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1Info"]
margin_left = 7.0
margin_right = 32.0
margin_bottom = 10.0
rect_min_size = Vector2( 25, 7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1Info/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Skeleton"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1Info"]
margin_left = 32.0
margin_right = 39.0
margin_bottom = 10.0
rect_min_size = Vector2( 7, 10 )

[node name="NinePatchRect2" type="NinePatchRect" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1Info"]
margin_left = 39.0
margin_right = 64.0
margin_bottom = 10.0
rect_min_size = Vector2( 25, 7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1Info/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "???"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1Info"]
margin_left = 64.0
margin_right = 71.0
margin_bottom = 10.0
rect_min_size = Vector2( 7, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect3" type="NinePatchRect" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1Info"]
margin_left = 71.0
margin_right = 96.0
margin_bottom = 10.0
rect_min_size = Vector2( 25, 7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpellBookMenu/BookPage/VBoxContainer/SkeletonTab/VBoxContainer/Row1Info/NinePatchRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "???"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CadaverTab" type="Control" parent="SpellBookMenu/BookPage/VBoxContainer"]
visible = false
margin_top = 7.0
margin_right = 120.0
margin_bottom = 7.0

[node name="VBoxContainer2" type="VBoxContainer" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab"]
margin_right = 111.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row1" type="HBoxContainer" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2"]
margin_right = 111.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1"]
margin_right = 7.0
margin_bottom = 25.0
rect_min_size = Vector2( 7, 0 )

[node name="SkeletonButton" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1"]
margin_left = 7.0
margin_right = 32.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 2 )
expand = true

[node name="TextureButton" type="TextureButton" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1/SkeletonButton"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1/SkeletonButton/TextureButton"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1/SkeletonButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1"]
margin_left = 32.0
margin_right = 39.0
margin_bottom = 25.0
rect_min_size = Vector2( 7, 0 )

[node name="NinePatchRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1"]
margin_left = 39.0
margin_right = 64.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1"]
margin_left = 64.0
margin_right = 71.0
margin_bottom = 25.0
rect_min_size = Vector2( 7, 0 )

[node name="NinePatchRect2" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1"]
margin_left = 71.0
margin_right = 96.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="Row1Info" type="HBoxContainer" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2"]
margin_top = 29.0
margin_right = 111.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 7 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1Info"]
margin_right = 7.0
margin_bottom = 10.0
rect_min_size = Vector2( 7, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1Info"]
margin_left = 7.0
margin_right = 32.0
margin_bottom = 10.0
rect_min_size = Vector2( 25, 7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1Info/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "???"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1Info"]
margin_left = 32.0
margin_right = 39.0
margin_bottom = 10.0
rect_min_size = Vector2( 7, 10 )

[node name="NinePatchRect2" type="NinePatchRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1Info"]
margin_left = 39.0
margin_right = 64.0
margin_bottom = 10.0
rect_min_size = Vector2( 25, 7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1Info/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "???"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1Info"]
margin_left = 64.0
margin_right = 71.0
margin_bottom = 10.0
rect_min_size = Vector2( 7, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect3" type="NinePatchRect" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1Info"]
margin_left = 71.0
margin_right = 96.0
margin_bottom = 10.0
rect_min_size = Vector2( 25, 7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpellBookMenu/BookPage/VBoxContainer/CadaverTab/VBoxContainer2/Row1Info/NinePatchRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "???"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SpellBookMenu/BookPage/Page/SkeletonTab/TextureRect/SkeletonButton" to="." method="_on_SkeletonButton_pressed"]
[connection signal="pressed" from="SpellBookMenu/BookPage/Page/CadaverTab/TextureRect/CadaverButton" to="." method="_on_CadaverButton_pressed"]
